closing feature #1070. Using "class" attribute instead of "id". Removing "valign" attribute and replacing it by CSS styles. This allow to align correctly pertinence, selection check boxes and result.
git-svn-id: https://www.silverpeas.org/svn/silverpeas/core/trunk@2469 a8e77078-a1c7-4fa5-b8fc-53c5178a176c

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2089,11 +2089,20 @@ td.browsebar a:hover {
 }
 
 /* Class for search group facet */
-.lineResult td {
-	padding-left: 5px;
+.lineResult .pertinence, .lineResult .selection, .lineResult .content {
 	padding-top: 5px;
+	padding-left: 5px;
+	vertical-align: top;
 }
 
+.lineResult .selection {
+	padding-top: 2px;
+}
+
+.lineResult .content {
+	padding-top: 4px;
+	padding-bottom: 14px;
+}
 
 #globalResultFrame {
 	width:80%;
